@startuml Diagrama_Clases_UML

title Diagrama de Clases UML - Herramienta Colaborativa de Modelado

skinparam classAttributeIconSize 0
skinparam monochrome false
skinparam shadowing false
skinparam defaultFontName "Segoe UI", sans-serif

class Usuario {
  +id: int
  +nombre: string
  +email: string
  +password_hash: string
  +estado: string
  +fecha_registro: datetime
}

class Proyecto {
  +id: int
  +titulo: string
  +descripcion: string
  +fecha_creacion: datetime
  +fecha_actualizacion: datetime
  +datos_diagrama: json
}

class DetalleProyecto {
  +id: int
  +rol: string
  +fecha_asignacion: datetime
}

Usuario "1" -- "0..*" Proyecto : propietario >
Usuario "1" -- "0..*" DetalleProyecto : usuario >
Proyecto "1" -- "0..*" DetalleProyecto : proyecto >

@enduml
